Adding Pixelation Filter

--- a/templates/imagefilter.html
+++ b/templates/imagefilter.html
@@ -8,19 +8,21 @@
     <h1>Upload Image to Apply Filter</h1>
     <p>  Give your photos a heritage-inspired black-and-white touch ,or apply a pixelated filter</p>
     <input type="file" id="imageInput">
-    <button onclick="uploadImage()">Apply Filter</button>
-
+    <button onclick="uploadImage('bw')">Apply Black-White Filter</button>
+    <button onclick="uploadImage('pixel')">Apply Pixel Filter</button>
     <br>
     <img id="filteredImage" src="" width="400">
     <br>
 
     <script>
-        function uploadImage() {
+        function uploadImage(filterType) {
             let formData = new FormData();
             let imageFile = document.getElementById('imageInput').files[0];
             formData.append('image', imageFile);
 
-            fetch('/imagefilter/apply', { method: 'POST', body: formData })
+            let url = filterType === 'bw' ? '/imagefilter/apply' : '/imagefilter/pixelized';
+
+            fetch(url, { method: 'POST', body: formData })
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById('filteredImage').src = data.image;
